This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

18-Oct-2010 Christophe Demko
 # [#22802] Contact category feed is blank (Elin Waring)

16-Oct-2010 Jean-Marie Simonet
 # [#21635] fail to copy menu item. Thanks Mathavan and Louis
 $ [#22914] COM_SEARCH_EXACT_PHRASE doesn't need the colon at end. Thanks Bill.
 # Reverting [#21635] as it breaks re-save article when debug on.
 
15-Oct-2010 Jean-Marie Simonet
 # Making core site templates installable/uninstallable. Changed protected template from milkyway to beez2.

14-Oct-2010 Louis Landry
 ^ Decoupled JPATH_ADMINISTRATOR from JApplication::initialise() method call when loading framework language file.
 # [#22825] Duplicated queries in global configuration.  (Thanks to Dennis Hermacki)
 # [#22553] Switcher function for submenu uses incompatible function for IE7 and chrome. (Thanks to Angie Radtke)
 # [#21541] When trying to delete a folder which contains images, the error message only displays for < 1 second. (Thanks to Mathavan Jeyadev)
 # [#21225] Copy and Move missing from each Manager - Categories & Menus. (Thanks to Michael Babker)
 # [#21842] Update GeSHI to current version. (Thanks to Michael Babker)

14-Oct-2010 Jean-Marie Simonet
 # [#22659] Debug plugin doesn't show 'afterRender' profiler mark and can't gather statistics of other system plugins. Thanks Dennis.
 $ Updating language xml files.
 # Changing Algerian flag to Arab League flag in langswitcher for ar.gif.

14-Oct-2010 Ian MacLennan
 # [#21189] vcard not working in contact, needs a vcard class in JView

14-Oct-2010 Mark Dexter
 # [#21661] Article access check is only using the current category, not checking further up the branch

14-Oct-2010 Christophe Demko